overflow  error is fixed

--- a/css/page1.css
+++ b/css/page1.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden ;
 }
   body{
     margin:0px;
@@ -238,11 +239,11 @@ path:nth-child(10){
 }
 .showDetails-container{
   position: absolute;
- 
+  display: none;
   width: 100%;
   height:100%;
   opacity:1;
-  top:0vw;
+  top:0px;
   margin:0px;
   transform: translateX(100%);
   transition:all 0.5s ease-in-out;
@@ -317,12 +318,12 @@ path:nth-child(10){
   }
 }
 .container-province-map{
-
+  display: none;
   width: 40%;
   float:left;
 }
 .container-province-list{
-
+  display: none;
   float:right;
   width:60%;
 }
@@ -436,7 +437,7 @@ path:nth-child(10){
     width:100%;
 }
 .column {
-  width: 20%;
+  width: 100%;
   align-items: center;
 }
 }
